--- a/Makefile.am
+++ b/Makefile.am
@@ -3,6 +3,7 @@ liboemhandler_LTLIBRARIES = liboemhandler.la
 
 liboemhandler_la_SOURCES = oemhandler.cpp \
                            host-interface.cpp \
+                           ldap.cpp \
                            local_users.cpp \
                            org/open_power/OCC/Metrics/error.cpp
 
